Midterm Updated (Dorcas)
New Updates_Dorcass

--- a/assignment/basicApplication.html
+++ b/assignment/basicApplication.html
@@ -5,13 +5,16 @@
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/leaflet.css" />
     <link rel="stylesheet" href="css/style.css" />
+    <!-- Goodle Web Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Slabo+27px" rel="stylesheet">
 
   </head>
   <body>
     <!-- Start HTML -->
     <div class="sidebar">
       <div id="intro">
-        <h1 class="polygon-header">Javascript Midterm: <i>Dengue Outbreak!</i></h1>
+        <center><img src="header3.png" height="255" width="255"></center>
+        <h1 class="polygon-header">Javascript Midterm: <br><i>Dengue Outbreak!</i></br></h1>
         <p class="main"><span class="title-replace">What is Dengue?</span></p>
         <p><span class="para-replace">Dengue Fever is a mosquito-borne viral disease in Singapore that spreads through the Aedes moquito.</span></p>
         <p><span class="link-replace">Click on the markers on map to get details on them or hit 'NEXT >' to learn more!</span></p>
